pantalla de inicio

--- a/Client/untitled3/CMakeLists.txt
+++ b/Client/untitled3/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SDL2_LIBRARY_DIR SDL2-2.0.20/lib/x64)
 include_directories(${SDL2_INCLUDE_DIR})
 link_directories(${SDL2_LIBRARY_DIR})
 
-add_executable(untitled3 main.c Constantes.h pantalla.c pantalla.h usuario.c usuario.h)
+add_executable(untitled3 main.c Constantes.h pantalla.c pantalla.h usuario.c usuario.h inicio.c inicio.h)
 target_link_libraries(${PROJECT_NAME} SDL2main SDL2)
 
 
